--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"parcel-plugin-static-files-copy": "^2.4.3"
 	},
 	"dependencies": {
+		"assets": "^3.0.1",
 		"phaser": "^3.55.2"
 	},
 	"parcelCleanPaths": [
