--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "phaser3-parcel-template",
+	"name": "zx-spectrum-jetpac-remake",
 	"version": "1.0.0",
-	"description": "A template project for Phaser 3 using Parceljs",
+	"description": "A remake of ZX Spectrum Jetpac game in JavaScript using Phaser 3",
 	"scripts": {
 		"start": "parcel src/index.html -p 8000",
 		"build": "parcel build src/index.html --out-dir dist",
